# edge-detection-using-cuda

./: .gitignore  CMakeLists.txt  Readme.md
benchmarks/: cpu_gpu_comparison.csv
src/host/: main  main.cpp  sobel_cpu.cpp  sobel_cpu.hpp
src/kernels/: sobel_cuda_naive.hpp  sobel_shared.cu
src/utils/: cpu_gpu_comparison.csv  plot_results.py
